--- a/EmployeeWellnessAPI/package.json
+++ b/EmployeeWellnessAPI/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "description": "EmployeeWellnessAPI",
   "author": {
-    "name": "pmanohar",
+    "name": "Manohar",
     "email": ""
   },
   "dependencies": {
